C1 ugls - implemented feedback + add optional challenge

--- a/week1-ungraded-lab/client.ipynb
+++ b/week1-ungraded-lab/client.ipynb
@@ -268,6 +268,41 @@
     "\n",
     "**Keep it up!**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "burning-fitness",
+   "metadata": {},
+   "source": [
+    "# \n",
+    "## Optional Challenge - Add the confidence level to the request\n",
+    "\n",
+    "As an optional challenge you can try to extend the server and the client so that the desired level of confidence for the object detection model can be specified by the client and be processed accordingly by the server. \n",
+    "\n",
+    "**To test your extended implementation you must perform the following steps:**\n",
+    "\n",
+    "- Stop the server by interrupting the Kernel.\n",
+    "- Extend the `prediction` function in the server.\n",
+    "- Re run the cell containing your server code.\n",
+    "- Re launch the server.\n",
+    "- Extend your client.\n",
+    "- Test it with some images (either with your client or fastAPI's one).\n",
+    "\n",
+    "Here are some hints that can help you out:\n",
+    "\n",
+    "#### Server side:\n",
+    "- The `prediction` function that handles the `/predict` endpoint needs an additional parameter to accept the confidence level. Add this new parameter before the `File` parameter. This is necessary because `File` has a default value and must be specified last.\n",
+    "\n",
+    "\n",
+    "- `cv.detect_common_objects` accepts the `confidence` parameter, which is a floating point number (type `float`in Python).\n",
+    "\n",
+    "\n",
+    "#### Client side:\n",
+    "- You can add a new parameter to the URL by extending it with an `&` followed by the name of the parameter and its value. The name of this new parameter must be equal to the name used within the `prediction` function in the server. An example would look like this: `myawesomemodel.com/predict?model=yolov3-tiny&newParam=value`\n",
+    "\n",
+    "\n",
+    "**You can do it!**"
+   ]
   }
  ],
  "metadata": {
