--- a/week1-ungraded-lab/server.ipynb
+++ b/week1-ungraded-lab/server.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "In concrete you will use the [`detect_common_objects`](https://docs.cvlib.net/object_detection/) function, which given an image represented as a [`numpy array`](https://numpy.org/doc/stable/reference/generated/numpy.array.html) returns:\n",
     "\n",
-    "- `bbox`: list of list containing bounding box co-ordinates for detected objects. \n",
+    "- `bbox`: list of list containing bounding box coordinates for detected objects. \n",
     "\n",
     "        Example:\n",
     "    \n",
@@ -121,7 +121,7 @@
     "\n",
     "This model is known as `yolov3-tiny`. It is designed for constrained environments that cannot store big models and as a result of this, it presents the tradeoff that it yields less accuracy than the full version. However, it still works pretty well. Going forward we recommend you stick to it since it is a lot smaller than the regular `yolov3` and downloading its pretrained weights takes less time.\n",
     "\n",
-    "The confidence level is the threshold that that determines if a given object is detected or not. By default, `detect_common_objects` uses a value of 0.5 for this."
+    "The confidence level is the threshold that determines if a given object is detected or not. By default, `detect_common_objects` uses a value of 0.5 for this."
    ]
   },
   {
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By lowering the confidence level the model successfully most of the fruits. However the confidence level was really low. In general you should be careful when lowering or increasing these kind of parameters as changing them might yield undesired results.\n",
+    "By lowering the confidence level the model successfully detects most of the fruits. However the confidence level was really low. In general you should be careful when lowering or increasing these kinds of parameters as changing them might yield undesired results.\n",
     "\n",
     "As for the orange that the model misclassified as an apple, it serves as a reminder that these models are not perfect and this should be considered when using them for tasks in production."
    ]
@@ -269,7 +269,7 @@
     "\n",
     "This client-server interaction is out of the scope of this notebook but there are a lot of resources in the internet that you can use to understand it better.\n",
     "\n",
-    "The important things you need to understand is that the Machine Learning model lives in a server waiting for some client to ask it to return predictions. The client should provide the information (values for the features or even images) that the model needs in order to make a prediction or predictions (it is common to batch many predictions in a single request). After using this information to predict, the server will return the actual prediction to the client, who can use it in any desired way.\n",
+    "The important thing you need to understand is that the Machine Learning model lives in a server waiting for some client to ask it to return predictions. The client should provide the information (values for the features or even images) that the model needs in order to make a prediction or predictions (it is common to batch many predictions in a single request). After using this information to predict, the server will return the actual prediction to the client, who can use it in any desired way.\n",
     "\n",
     "To create a server on fastAPI all you need to do is to create an instance of the `FastAPI` class:\n",
     "\n",
@@ -288,7 +288,7 @@
     "\n",
     "#### Endpoints\n",
     "\n",
-    "You can host multiple Machine Learning models in the same server. For this to work you can assign a different `endpoint` to each model so you always know what model is being used. An endpoint is represented by a pattern in the `URL`. As an example if you have a website called `myawesomemodel.com` you could have three different models in the following endpoints:\n",
+    "You can host multiple Machine Learning models on the same server. For this to work you can assign a different `endpoint` to each model so you always know what model is being used. An endpoint is represented by a pattern in the `URL`. As an example if you have a website called `myawesomemodel.com` you could have three different models in the following endpoints:\n",
     "\n",
     "- `myawesomemodel.com/count-cars/`\n",
     "- `myawesomemodel.com/count-apples/`\n",
@@ -335,7 +335,7 @@
     "\n",
     "### Why fastAPI?\n",
     "\n",
-    "The reason that you are doing this exercise using fastAPI is that it enables to create web servers to host your models very easily. Aditional to this, it is extremely fast and it **has a built-in client that can be used to interact with the server**. To use it you will need to visit the **\"/docs\"** endpoint. Isn't that convenient? \n",
+    "The reason that you are doing this exercise using fastAPI is that it enables you to create web servers to host your models very easily. Additional to this, it is extremely fast and it **has a built-in client that can be used to interact with the server**. To use it you will need to visit the **\"/docs\"** endpoint, for this case this means to visit [http://localhost:8000/docs](http://localhost:8000/docs). Isn't that convenient? \n",
     "\n",
     "Enough chatter, let's get going!"
    ]
@@ -361,24 +361,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign an instance of the FastAPI class to the variable \"app\"\n",
-    "# You will interact with you api using this instance\n",
+    "# Assign an instance of the FastAPI class to the variable \"app\".\n",
+    "# You will interact with you api using this instance.\n",
     "app = FastAPI(title='Deploying a ML Model with FastAPI')\n",
     "\n",
-    "# List available models using Enum for convenience\n",
+    "# List available models using Enum for convenience. This is useful when the options are pre-defined.\n",
     "class Model(str, Enum):\n",
     "    yolov3tiny = \"yolov3-tiny\"\n",
     "    yolov3 = \"yolov3\"\n",
     "\n",
     "\n",
-    "# By using @app.get(\"/\") you are allowing the GET method to work for the / endpoint\n",
+    "# By using @app.get(\"/\") you are allowing the GET method to work for the / endpoint.\n",
     "@app.get(\"/\")\n",
     "def home():\n",
-    "    return \"Congratulations! Your API is working as expected. Now head over to the /docs endpoint.\"\n",
+    "    return \"Congratulations! Your API is working as expected. Now head over to http://localhost:8000/docs.\"\n",
     "\n",
     "\n",
-    "# This endpoint handles all the logic necessary for the object detection to work\n",
-    "# It requires the desired model and the image in which to perform object detection\n",
+    "# This endpoint handles all the logic necessary for the object detection to work.\n",
+    "# It requires the desired model and the image in which to perform object detection.\n",
     "@app.post(\"/predict\") \n",
     "def prediction(model: Model, file: UploadFile = File(...)):\n",
     "\n",
@@ -455,7 +455,16 @@
    "source": [
     "The server is now running! Head over to [http://localhost:8000/](http://localhost:8000/) to see it in action.\n",
     "\n",
-    "Then visit [http://localhost:8000/docs](http://localhost:8000/docs) to interact with it using the built-in client. When doing so you will get a screen that should look like this:"
+    "**Try submitting an image** and see how your API is able to detect objects within it and return a new image containing the bounding boxes alongside the labels of the detected objects. **You can do this by  visiting [http://localhost:8000/docs](http://localhost:8000/docs) to open fastAPI's built-in client.** \n",
+    "\n",
+    "When doing so you will get a screen that should look like the one below, follow the instructions next:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click on top of the `/predict` endpoint and more options will become visible:"
    ]
   },
   {
@@ -475,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click on top of the `/predict` endpoint and more options will become visible:"
+    "To test your server click on the **Try it out** button."
    ]
   },
   {
@@ -494,7 +503,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To test your server click on the **Try it out** button."
+    "You can choose a model for the **model** field (if you select the full YOLO model the server will stuck until the weights for this model are downloaded) and a **file** which should be the image in which you want the server to detect objects.\n",
+    "\n",
+    "**Submit an image** from your local filesystem by clicking the **Choose File** button, then click on the blue **Execute** button to send an HTTP request to the server. After doing so, **scroll down and you will see the response from it**. Pretty cool, right?"
    ]
   },
   {
@@ -513,9 +524,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can choose a model for the **model** field (if you select the full YOLO model the server will stuck until the weights for this model are downloaded) and a **file** which should be the image in which you want the server to detect objects. Try submitting non-image files and see how the server reacts to it.\n",
+    "**Try different images!** You can use the ones we provided with this lab or some of your own. Since the model is using the default confidence level of 0.5 it might not always succeed to detect some objects. \n",
     "\n",
-    "After submitting a file, click on the blue **Execute** button to send an HTTP request to the server. After doing so, you can scroll down and you will see the response from it. Pretty cool, right?"
+    "Also, try submitting non-image files and see how the server reacts to it."
    ]
   },
   {
@@ -526,7 +537,9 @@
     "\n",
     "It is awesome that fastAPI allows you to interact with your API through its built-in client. However you might wonder how you can interact with your API using regular code and not some UI.\n",
     "\n",
-    "We also have provided a notebook in which you can check how a minimal client in Python looks like. For this, **leave the server running (don't interrupt the kernel or close this window)** and open the `client.ipynb` notebook. You can right-click the Jupyter logo on the upper left corner of the window and select \"open link a new tab\" to do this without closing this window."
+    "We also have provided a notebook in which you can check how a minimal client in Python looks like. For this, **leave the server running (don't interrupt the kernel or close this window)** and open the `client.ipynb` notebook. You can right-click the Jupyter logo on the upper left corner of the window and select \"open link a new tab\" to do this without closing this window.\n",
+    "\n",
+    "There is also an optional challenge ahead!"
    ]
   }
  ],
