C1 ugls - implemented Dani's markdown refactor

--- a/week1-ungraded-lab/client.ipynb
+++ b/week1-ungraded-lab/client.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "allied-indianapolis",
    "metadata": {},
    "source": [
-    "# Ungraded Lab Part 2 - Consume a Machine Learning Model\n",
+    "# Ungraded Lab Part 2 - Consuming a Machine Learning Model\n",
     "\n",
-    "Welcome to part 2 of this ungraded lab! **Before going forward check that the server from part 1 is still running.**\n",
+    "Welcome to the second part of this ungraded lab! \n",
+    "**Before going forward check that the server from part 1 is still running.**\n",
     "\n",
-    "In this notebook you will code a minimal client that uses Python's `requests` library to interact with your server."
+    "In this notebook you will code a minimal client that uses Python's `requests` library to interact with your running server."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elementary-sewing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,27 +28,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guilty-shield",
    "metadata": {},
    "source": [
-    "## Understand the URL\n",
+    "## Understanding the URL\n",
     "\n",
     "\n",
     "### Breaking down the URL\n",
     "\n",
-    "If you played with fastAPI's client maybe you noticed that the way the requests were made was by pointing to an URL and appending some parameters to it.\n",
+    "After experimenting with the fastAPI's client you may have noticed that we made all requests by pointing to a  specific URL and appending some parameters to it.\n",
     "\n",
-    "Your server is now hosted in the URL [http://localhost:8000/](http://localhost:8000/).\n",
+    "More concretely:\n",
     "\n",
-    "The endpoint that serves your model is the `/predict` endpoint.\n",
+    "1. The server is hosted in the URL [http://localhost:8000/](http://localhost:8000/).\n",
+    "2. The endpoint that serves your model is the `/predict` endpoint.\n",
     "\n",
-    "And if you stuck with the tiny version of YOLOV3 the model used is `yolov3-tiny`."
+    "Also you can specify the model to use:  `yolov3` or`yolov3-tiny`. Let's stick to the tiny version for computational efficiency.\n",
+    "\n",
+    "Let's get started by putting in place all this information."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "humanitarian-strip",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organizational-printing",
    "metadata": {},
    "source": [
-    "By appending the base URL and the endpoint you will get the full URL (without parameters) needed to consume your model."
+    "To consume your model, you append the endpoint to the base URL to get the full URL. Notice that the parameters are absent for now."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adequate-auditor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +77,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinated-episode",
    "metadata": {},
    "source": [
-    "To set any parameters the common syntax is to add a \"?\" character followed by the name of the parameter and its value.\n",
+    "To set any of the expected parameters, the syntax is to add a \"?\" character followed by the name of the parameter and its value.\n",
     "\n",
-    "Let's do it and see how the final URL would look like:"
+    "Let's do it and check how the final URL looks like:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continuing-furniture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,26 +96,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solar-concentrate",
    "metadata": {},
    "source": [
-    "You might notice that this endpoint expects both a model's name and an image. But since the image is more complex it is not passed within the URL. Instead we can use the `requests` library to handle this.\n",
+    "This endpoint expects both a model's name and an image. But since the image is more complex it is not passed within the URL. Instead we leverage the `requests` library to handle this process.\n",
     "\n",
-    "## Do a request to your server\n",
+    "# Sending a request to your server\n",
     "\n",
-    "### Code the response_from_server function\n",
+    "### Coding the response_from_server function\n",
     "\n",
-    "Remember that this endpoint expects a POST HTTP request. To create such request you can use the `post` function from the requests library. \n",
+    "As a reminder,  this endpoint expects a POST HTTP request. The `post` function is part of the requests library. \n",
     "\n",
-    "To pass the file along with the request, create a dictionary indicating the name of the file ('file' in this case) and the actual file.\n",
+    "To pass the file along with the request, you need to create a dictionary indicating the name of the file ('file' in this case) and the actual file.\n",
     "\n",
-    "When doing a request you can check the `status code` of the response it produced. **A status code of 200 means that everything went well.**"
+    " `status code` is handy command to check the status of the response the request triggered. **A status code of 200 means that everything went well.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capable-excuse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,16 +140,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-receptor",
    "metadata": {},
    "source": [
-    "To test this function you can open a file in your filesystem and pass it as a parameter alongside the URL:"
+    "To test this function, open a file in your filesystem and pass it as a parameter alongside the URL:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "magnetic-broadcasting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,20 +157,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-dynamics",
    "metadata": {},
    "source": [
-    "It is great to know that the request was succesful but you are not getting any information about the objects in the image.\n",
+    "Great news! The request was successful. However, you are not getting any information about the objects in the image.\n",
     "\n",
-    "To get the image with the bounding boxes and labels you need to parse the content of the response into an appropiate format. This process looks very similar to how you read the raw image into a cv2 image in the server.\n",
+    "To get the image with the bounding boxes and labels,  you need to parse the content of the response into an appropriate format. This process looks very similar to how you read raw images into a cv2 image on the server.\n",
     "\n",
-    "Before doing this, let's create a directory called `images_predicted` to save the image to:"
+    "To handle this step, let's create a directory called `images_predicted` to save the image to:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cloudy-serve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,17 +179,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interracial-genome",
    "metadata": {},
    "source": [
     "\n",
-    "### Create the display_image_from_response function"
+    "### Creating the display_image_from_response function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coupled-choice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tamil-lambda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,18 +218,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acknowledged-brunei",
    "metadata": {},
    "source": [
-    "Now you can consume your object detection model through your own client!\n",
+    "Now you are ready to consume your object detection model through your own client!\n",
     "\n",
-    "Test it out on some other images:"
+    "Let's test it out on some other images:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "miniature-general",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,23 +246,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latest-albert",
    "metadata": {},
    "source": [
-    "**Congratulations on finishing this ungraded lab!** Real life clients and servers have a lot more going on in terms of security and performance. However, the code you just saw is close to the one on a real production environment. We hope you feel more familiar with the process of deploying a Deep Learning model, consuming it and encourage you to keep studying.\n",
+    "**Congratulations on finishing this ungraded lab!** Real life clients and servers have a lot more going on in terms of security and performance. However, the code you just experience with is close to what you see in real production environments. \n",
+    "Hopefully, this lab served the purpose of increasing your familiarity with the process of deploying a Deep Learning model, and consuming from it.\n",
     "\n",
     "**Keep it up!**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "burning-fitness",
    "metadata": {},
    "source": [
     "# \n",
-    "## Optional Challenge - Add the confidence level to the request\n",
+    "## Optional Challenge - Adding the confidence level to the request\n",
     "\n",
-    "As an optional challenge you can try to extend the server and the client so that the desired level of confidence for the object detection model can be specified by the client and be processed accordingly by the server. \n",
+    "Let's expand on what you have learned so far. The next logical step is to extend the server and the client so that they can accommodate an additional parameter: the level of confidence of the prediction. \n",
     "\n",
     "**To test your extended implementation you must perform the following steps:**\n",
     "\n",
@@ -288,7 +272,7 @@
     "- Extend your client.\n",
     "- Test it with some images (either with your client or fastAPI's one).\n",
     "\n",
-    "Here are some hints that can help you out:\n",
+    "Here are some hints that can help you out throughout the process:\n",
     "\n",
     "#### Server side:\n",
     "- The `prediction` function that handles the `/predict` endpoint needs an additional parameter to accept the confidence level. Add this new parameter before the `File` parameter. This is necessary because `File` has a default value and must be specified last.\n",
@@ -321,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
