week 2 ungraded lab - update open in colab badge

--- a/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/https-deeplearning-ai/MLEP-public/blob/main/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb)"
+    "<a href=\"https://colab.research.google.com/github/https-deeplearning-ai/MLEP-public/blob/main/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
