week 1 ungraded lab - fix typos

--- a/week1-ungraded-lab/client.ipynb
+++ b/week1-ungraded-lab/client.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "To pass the file along with the request, you need to create a dictionary indicating the name of the file ('file' in this case) and the actual file.\n",
     "\n",
-    " `status code` is handy command to check the status of the response the request triggered. **A status code of 200 means that everything went well.**"
+    " `status code` is a handy command to check the status of the response the request triggered. **A status code of 200 means that everything went well.**"
    ]
   },
   {
