--- a/week1-ungraded-lab/server.ipynb
+++ b/week1-ungraded-lab/server.ipynb
@@ -124,9 +124,9 @@
     "\n",
     "You might ask yourself why does this function receive the model as an input argument? What models are there to choose from? The answer is that `detect_common_objects` uses the `yolov3` model by default.  However, there is another option available that is much tinier and requires less computational power. \n",
     "\n",
-    "It is the `yolov3-tiny` version. As the model name indicates, this model is designed for constrained environments that cannot store big models. With this comes a a natural tradeoff: the results are less accurate than the full model. However, it still works pretty well. Going forward, we recommend you stick to it since it is a lot smaller than the regular `yolov3` and downloading its pretrained weights takes less time.\n",
+    "It is the `yolov3-tiny` version. As the model name indicates, this model is designed for constrained environments that cannot store big models. With this comes a natural tradeoff: the results are less accurate than the full model. However, it still works pretty well. Going forward, we recommend you stick to it since it is a lot smaller than the regular `yolov3` and downloading its pretrained weights takes less time.\n",
     "\n",
-    "The model output is vector of probabilities for the presence of different objects on the image. The last input argument, confidence level, determines the threshold that the probability needs to surpass to report that a given object is detected on the supplied image. By default, `detect_common_objects` uses a value of 0.5 for this."
+    "The model output is a vector of probabilities for the presence of different objects on the image. The last input argument, confidence level, determines the threshold that the probability needs to surpass to report that a given object is detected on the supplied image. By default, `detect_common_objects` uses a value of 0.5 for this."
    ]
   },
   {
@@ -321,7 +321,7 @@
     "\n",
     "If your client does a `GET request` to an endpoint of a server you will get some information from this endpoint without the need to provide additional information. In the case of a `POST request` you are explicitly telling the server that you will provide some information for it that must be processed in some way.\n",
     "\n",
-    "Interactions with Machine Learning models living on endpoints are usually done via a `POST request` since you need to provide the information that the is required to compute a prediction.\n",
+    "Interactions with Machine Learning models living on endpoints are usually done via a `POST request` since you need to provide the information that is required to compute a prediction.\n",
     "\n",
     "Let's take a look at a POST request:\n",
     "\n",
@@ -333,7 +333,7 @@
     "\n",
     "```\n",
     "\n",
-    "For POST requests, the handler function contains parameters. In contrast with GET, POST requests expect the client to provide some information to it. In this case we supplied to parameters: an integer and a string.\n",
+    "For POST requests, the handler function contains parameters. In contrast with GET, POST requests expect the client to provide some information to it. In this case we supplied two parameters: an integer and a string.\n",
     "\n",
     "\n",
     "### Why fastAPI?\n",
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "# Assign an instance of the FastAPI class to the variable \"app\".\n",
-    "# You will interact with you api using this instance.\n",
+    "# You will interact with your api using this instance.\n",
     "app = FastAPI(title='Deploying a ML Model with FastAPI')\n",
     "\n",
     "# List available models using Enum for convenience. This is useful when the options are pre-defined.\n",
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can choose a model from the **model** field (if you select the full YOLO model the server will stuck until the weights for this model are downloaded) and a **file** which should be the image in which you want the server to detect objects.\n",
+    "You can choose a model from the **model** field (if you select the full YOLO model the server will be stuck until the weights for this model are downloaded) and a **file** which should be the image in which you want the server to detect objects.\n",
     "\n",
     "**Submit an image** from your local filesystem by clicking the **Choose File** button, then click on the blue **Execute** button to send an HTTP request to the server. After doing so, **scroll down and you will see the response from it**. Pretty cool, right?"
    ]
@@ -540,7 +540,7 @@
     "\n",
     "It is awesome that fastAPI allows you to interact with your API through its built-in client. However, you might wonder how you can interact with your API using regular code and not some UI.\n",
     "\n",
-    "To do so, we have also provided a notebook in which you can check how a minimal client in Python looks like. For this, **leave the server running (don't interrupt the kernel or close this window)** and open the `client.ipynb` notebook. You can right-click the Jupyter logo on the upper left corner of the window and select \"open link a new tab\" to do this without closing this window.\n",
+    "To do so, we have also provided a notebook in which you can check how a minimal client in Python looks like. For this, **leave the server running (don't interrupt the kernel or close this window)** and open the `client.ipynb` notebook. To do so you can open the File Browser tab on the sidebar located on the left of the window and double click on `client.ipynb`. If you cannot see a different tab for each file (which is very useful for moving between them) then it is possible you have the \"Simple Interface\" (aka Single-Document) mode enabled. To disable it you can go to the View tab and do so.\n",
     "\n",
     "There is also an optional challenge ahead!"
    ]
