week 2 ungraded lab - prevent error if cell with makedir is run twice

--- a/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -312,7 +312,8 @@
     "                   'eval/cats', 'eval/dogs', 'eval/birds']\n",
     "\n",
     "for dir in train_eval_dirs:\n",
-    "  os.makedirs(os.path.join(base_dir, dir))"
+    "  if not os.path.exists(os.path.join(base_dir, dir)):\n",
+    "    os.makedirs(os.path.join(base_dir, dir))"
    ]
   },
   {
@@ -452,7 +453,8 @@
    "outputs": [],
    "source": [
     "for dir in train_eval_dirs:\n",
-    "  os.makedirs(os.path.join(base_dir, 'imbalanced/'+dir))"
+    "  if not os.path.exists(os.path.join(base_dir, 'imbalanced/'+dir)):\n",
+    "    os.makedirs(os.path.join(base_dir, 'imbalanced/'+dir))"
    ]
   },
   {
