week 3 ungraded lab - fix command rendered as mdown

--- a/course1/week3-ungraded-lab/C1W3_Data_Labeling_Ungraded_Lab.ipynb
+++ b/course1/week3-ungraded-lab/C1W3_Data_Labeling_Ungraded_Lab.ipynb
@@ -57,8 +57,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!git clone https://github.com/https-deeplearning-ai/MLEP-public.git"
    ]
@@ -166,7 +168,7 @@
    "outputs": [],
    "source": [
     "# Drop unused columns\n",
-    "df_labeled = df_labeled.drop(['index', 'comment_id', 'author', 'date'], axis=1)\n",
+    "df_labeled = df_labeled.drop(['index', 'COMMENT_ID', 'AUTHOR', 'DATE'], axis=1)\n",
     "\n",
     "# Look at the cleaned dataset\n",
     "df_labeled.head()"
